force-app/main/default/objects/Account/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>