force-app/main/default/objects/Account/fields/AccountExternalLink__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalLink__c</fullName>
    <formula>$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Account External Link</label>
    <type>Text</type>
</CustomField>