force-app/main/default/objects/Account/fields/AccountInternalLink__c.field-meta.xml
<CustomField>
    <fullName>AccountInternalLink__c</fullName>
    <formula>$Setup.GNT__GlobalConfig__c.GNT__InternalURLDomain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Account Internal Link</label>
    <type>Text</type>
</CustomField>