force-app/main/default/objects/Account/fields/AdvancePayReqApproval__c.field-meta.xml
<CustomField>
    <fullName>AdvancePayReqApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment Request</label>
    <type>Checkbox</type>
</CustomField>