force-app/main/default/objects/Account/fields/AffiliatedInstitution__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedInstitution__c</fullName>
    <label>Affiliated Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>