force-app/main/default/objects/Account/fields/AgencyId__c.field-meta.xml
<CustomField>
    <fullName>AgencyId__c</fullName>
    <formula>CASE(TEXT(Type), 
&apos;Executive&apos;, Id, 
&apos;Division&apos;, ParentId, 
&apos;Office&apos;, Parent.ParentId, 
Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_AgencyId</label>
    <type>Text</type>
</CustomField>