force-app/main/default/objects/Account/fields/AggregateAwardRiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>AggregateAwardRiskAssessment__c</fullName>
    <label>Aggregate Award Risk Assessment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>