force-app/main/default/objects/Account/fields/AggregateOrgRiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>AggregateOrgRiskAssessment__c</fullName>
    <label>Aggregate Org Risk Assessment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>