force-app/main/default/objects/Account/fields/AnnExeAppReq__c.field-meta.xml
<CustomField>
    <fullName>AnnExeAppReq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ann Exe App Req</label>
    <type>Checkbox</type>
</CustomField>