force-app/main/default/objects/Account/fields/ApplicantType__c.field-meta.xml
<CustomField>
    <fullName>ApplicantType__c</fullName>
    <label>Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>23</fullName>
                <default>true</default>
                <label>Firms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>