force-app/main/default/objects/Account/fields/ApplicantTypeOther__c.field-meta.xml
<CustomField>
    <fullName>ApplicantTypeOther__c</fullName>
    <description>If the Applicant Type is other than the one specified in the available list of the values</description>
    <label>X_Applicant Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>