force-app/main/default/objects/Account/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <formula>$Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c == &apos;StateasGrantor&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_AppName</label>
    <type>Checkbox</type>
</CustomField>