force-app/main/default/objects/Account/fields/ApprovedByGrantor__c.field-meta.xml
<CustomField>
    <fullName>ApprovedByGrantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Approved by Grantor</label>
    <type>Checkbox</type>
</CustomField>