force-app/main/default/objects/Account/fields/ApprovedByParent__c.field-meta.xml
<CustomField>
    <fullName>ApprovedByParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Approved by Parent</label>
    <type>Checkbox</type>
</CustomField>