force-app/main/default/objects/Account/fields/BillingPostalCodeExtension__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCodeExtension__c</fullName>
    <description>Used for the GOVSBIR</description>
    <label>4-Digit Zip Code Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>