force-app/main/default/objects/Account/fields/CFDA__c.field-meta.xml
<CustomField>
    <fullName>CFDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_CFDA</label>
    <type>Checkbox</type>
</CustomField>