force-app/main/default/objects/Account/fields/ChildOrganization__c.field-meta.xml
<CustomField>
    <fullName>ChildOrganization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B_Child Organization</label>
    <type>Checkbox</type>
</CustomField>