force-app/main/default/objects/Account/fields/ChildOrganizationPending__c.field-meta.xml
<CustomField>
    <fullName>ChildOrganizationPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An organization is pending approval to become a child of this Organization when this value is true.</description>
    <label>B_Child Organization Pending</label>
    <type>Checkbox</type>
</CustomField>