force-app/main/default/objects/Account/fields/ChildRecordCount__c.field-meta.xml
<CustomField>
    <fullName>ChildRecordCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Keeps the count of number of childs belonging to this account</description>
    <inlineHelpText>This field is used to keep track of child count for parent record.</inlineHelpText>
    <label>X_Child Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>