force-app/main/default/objects/Account/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>Agency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>