force-app/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>X_Comments</label>
    <type>TextArea</type>
</CustomField>