force-app/main/default/objects/Account/fields/CongressionalDistrict__c.field-meta.xml
<CustomField>
    <fullName>CongressionalDistrict__c</fullName>
    <description>Enter 3 digit numeric value. For Example if Congressional District is 8 enter 008, if congressional District is 78 enter 078 and if Congressional District is 876 enter 876.</description>
    <inlineHelpText>Enter 3 digit numeric value. For Example if Congressional District is 8 enter 008, if congressional District is 78 enter 078 and if Congressional District is 876 enter 876.</inlineHelpText>
    <label>Congressional District</label>
    <length>3</length>
    <type>Text</type>
</CustomField>