force-app/main/default/objects/Account/fields/CountyCode__c.field-meta.xml
<CustomField>
    <fullName>CountyCode__c</fullName>
    <label>X_County Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>