force-app/main/default/objects/Account/fields/DCSupplySchedule__c.field-meta.xml
<CustomField>
    <fullName>DCSupplySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_LocalSupplySchedule</label>
    <type>Checkbox</type>
</CustomField>