force-app/main/default/objects/Account/fields/DisableActivateButton__c.field-meta.xml
<CustomField>
    <fullName>DisableActivateButton__c</fullName>
    <description>Button logic to hide the Activate button on the Internal organization</description>
    <formula>if(ISPICKVAL(Status__c , &apos;Active&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Disable Activate Button</label>
    <type>Checkbox</type>
</CustomField>