force-app/main/default/objects/Account/fields/DisableChildOrganizationTable__c.field-meta.xml
<CustomField>
    <fullName>DisableChildOrganizationTable__c</fullName>
    <formula>ChildRecordCount__c  &lt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_DisableChildOrganizationTable</label>
    <type>Checkbox</type>
</CustomField>