force-app/main/default/objects/Account/fields/DisableDeactivateButton__c.field-meta.xml
<CustomField>
    <fullName>DisableDeactivateButton__c</fullName>
    <formula>if(ISPICKVAL(Status__c , &apos;Inactive&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Disable Deactivate Button</label>
    <type>Checkbox</type>
</CustomField>