force-app/main/default/objects/Account/fields/DisplayDeleteButton__c.field-meta.xml
<CustomField>
    <fullName>DisplayDeleteButton__c</fullName>
    <formula>NOT($Profile.Name = &apos;System Administrator&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Display Delete Button</label>
    <type>Checkbox</type>
</CustomField>