force-app/main/default/objects/Account/fields/DisplayEditButton__c.field-meta.xml
<CustomField>
    <fullName>DisplayEditButton__c</fullName>
    <formula>ExternalUserOwner__c != $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Display Edit Button</label>
    <type>Checkbox</type>
</CustomField>