force-app/main/default/objects/Account/fields/DUNSExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DUNSExpirationDate__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>SAM Expiration Date</label>
    <type>Date</type>
</CustomField>