force-app/main/default/objects/Account/fields/EINText__c.field-meta.xml
<CustomField>
    <fullName>EINText__c</fullName>
    <description>Used for GOVSBIR</description>
    <label>EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>