force-app/main/default/objects/Account/fields/ExclusionFirstName__c.field-meta.xml
<CustomField>
    <fullName>ExclusionFirstName__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>