force-app/main/default/objects/Account/fields/ExclusionLastName__c.field-meta.xml
<CustomField>
    <fullName>ExclusionLastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>