force-app/main/default/objects/Account/fields/ExclusionSSN__c.field-meta.xml
<CustomField>
    <fullName>ExclusionSSN__c</fullName>
    <label>X_Exclusion SSN</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>