force-app/main/default/objects/Account/fields/Executiveapprovalnotrequired__c.field-meta.xml
<CustomField>
    <fullName>Executiveapprovalnotrequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Executive approval not required</label>
    <type>Checkbox</type>
</CustomField>