force-app/main/default/objects/Account/fields/ExecutiveOffice__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveOffice__c</fullName>
    <formula>IF(
  AND(
    ISPICKVAL(Parent.Type, &apos;Executive&apos;),
    Parent.Name != &apos;GMS Administrator&apos;
  ),
  Parent.Name,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Executive Office</label>
    <type>Text</type>
</CustomField>