force-app/main/default/objects/Account/fields/ExecutiveOfficeLink__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveOfficeLink__c</fullName>
    <formula>IF( 
AND( 
ISPICKVAL(Parent.Type, &apos;Executive&apos;), 
Parent.Name != &apos;GMS Administrator&apos; 
), 
HYPERLINK(&apos;/&apos; &amp; ParentId, ExecutiveOffice__c ,&apos;_blank&apos;) , 
&apos;NA&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Office</label>
    <type>Text</type>
</CustomField>