force-app/main/default/objects/Account/fields/ExternalUserOwner__c.field-meta.xml
<CustomField>
    <fullName>ExternalUserOwner__c</fullName>
    <inlineHelpText>Id of the external user who has registered for this organization</inlineHelpText>
    <label>X_External User Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>