force-app/main/default/objects/Account/fields/FederalGSASchedule__c.field-meta.xml
<CustomField>
    <fullName>FederalGSASchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is copied over over to hte User Registration object  11/201/2015</description>
    <label>X_Are you in Federal GSA Schedule?</label>
    <type>Checkbox</type>
</CustomField>