force-app/main/default/objects/Account/fields/FedralGSASchedule__c.field-meta.xml
<CustomField>
    <fullName>FedralGSASchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_FedralGSASchedule</label>
    <type>Checkbox</type>
</CustomField>