force-app/main/default/objects/Account/fields/FfataQuestionOne__c.field-meta.xml
<CustomField>
    <fullName>FfataQuestionOne__c</fullName>
    <label>FfataQuestionOne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>