force-app/main/default/objects/Account/fields/FfataQuestionTwo__c.field-meta.xml
<CustomField>
    <fullName>FfataQuestionTwo__c</fullName>
    <label>FfataQuestionTwo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>