force-app/main/default/objects/Account/fields/FullBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>FullBillingAddress__c</fullName>
    <formula>BillingStreet + BR() + BillingCity + &apos; &apos; + BillingState + &apos; &apos; + BillingPostalCode + BR() + BillingCountry+ HYPERLINK(&apos;&apos;,&apos;&apos;)</formula>
    <label>X_Organization Address</label>
    <type>Text</type>
</CustomField>