force-app/main/default/objects/Account/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>ExclusionFirstName__c + &apos; &apos; + ExclusionLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclusion Full Name</label>
    <type>Text</type>
</CustomField>