force-app/main/default/objects/Account/fields/FundingOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>FundingOfficeCode__c</fullName>
    <label>Funding Office Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>