force-app/main/default/objects/Account/fields/GNT__DepartmentLogoDocumentName__c.field-meta.xml
<CustomField>
    <fullName>GNT__DepartmentLogoDocumentName__c</fullName>
    <description>This field contains document name for the header logo which will be displayed as Dept. logo at header</description>
    <label>Department Logo Document Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>