force-app/main/default/objects/Account/fields/GNT__LetterHeadDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>GNT__LetterHeadDeveloperName__c</fullName>
    <description>Developer Name of letterhead</description>
    <label>Letter Head Developer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>