force-app/main/default/objects/Account/fields/GNT__RoleCode__c.field-meta.xml
<CustomField>
    <fullName>GNT__RoleCode__c</fullName>
    <label>Role Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>