force-app/main/default/objects/Account/fields/GNT__Workspace__c.field-meta.xml
<CustomField>
    <fullName>GNT__Workspace__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field holds its related Library configuration.
We have a custom object(Workspace__c) which store all the configuration for Library(ContentWorkspace)</description>
    <inlineHelpText>This field holds its related Library configuration.
We have a custom object(Workspace__c) which store all the configuration for Library(ContentWorkspace)</inlineHelpText>
    <label>Workspace</label>
    <referenceTo>GNT__Workspace__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>