force-app/main/default/objects/Account/fields/GNT__WorkspaceId__c.field-meta.xml
<CustomField>
    <fullName>GNT__WorkspaceId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field contains the Workspace Id</description>
    <label>Workspace Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>