force-app/main/default/objects/Account/fields/Gov_Id__c.field-meta.xml
<CustomField>
    <fullName>Gov_Id__c</fullName>
    <label>X_Gov Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>