force-app/main/default/objects/Account/fields/GranteeExecutiveApproval__c.field-meta.xml
<CustomField>
    <fullName>GranteeExecutiveApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grantee Executive Approval</label>
    <type>Checkbox</type>
</CustomField>