force-app/main/default/objects/Account/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <description>To group all the accounts and for user lookup of the Agencies</description>
    <label>Group Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>