force-app/main/default/objects/Account/fields/HeadAgency__c.field-meta.xml
<CustomField>
    <fullName>HeadAgency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If yes, Organization can or does have child agencies.</description>
    <label>B_Head Agency</label>
    <type>Checkbox</type>
</CustomField>