force-app/main/default/objects/Account/fields/HeaderLabel__c.field-meta.xml
<CustomField>
    <fullName>HeaderLabel__c</fullName>
    <formula>IF(
  IndividualAccount__c = true,
  &apos;Individual Subrecipient&apos;,
  &apos;Subrecipient Organization&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Header Label</label>
    <type>Text</type>
</CustomField>