force-app/main/default/objects/Account/fields/HideForGMSAdmin__c.field-meta.xml
<CustomField>
    <fullName>HideForGMSAdmin__c</fullName>
    <formula>IF(ISPICKVAL(Type, &apos;Executive&apos;), True, 
IF(ISPICKVAL(Type, &apos;Agency&apos;) &amp;&amp; ISPICKVAL(Parent.Type,&apos;Root&apos; ), True, 
IF(ISPICKVAL(Type, &apos;Division&apos;)&amp;&amp; ISPICKVAL(Parent.Parent.Type,&apos;Root&apos; ), True, 
IF(ISPICKVAL(Type, &apos;Office&apos;) &amp;&amp; ISPICKVAL(Parent.Parent.Parent.Type,&apos;Root&apos; ), True,false))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_HideForGMSAdmin</label>
    <type>Checkbox</type>
</CustomField>