force-app/main/default/objects/Account/fields/HideNewIndirect__c.field-meta.xml
<CustomField>
    <fullName>HideNewIndirect__c</fullName>
    <formula>OR($Profile.Name ==&apos;System Administrator&apos;,
LEFT($User.GNT__OrganizationId__c, 15) == LEFT(Id, 15),
LEFT($User.GNT__OrganizationId__c, 15) == LEFT(ParentId, 15)
)</formula>
    <label>X_HideNewIndirect</label>
    <type>Checkbox</type>
</CustomField>