force-app/main/default/objects/Account/fields/HideNewProgram__c.field-meta.xml
<CustomField>
    <fullName>HideNewProgram__c</fullName>
    <formula>NOT(
  OR(
    Id == $User.GNT__OrganizationId__c,
    Parent.Id == $User.GNT__OrganizationId__c,
    Parent.Parent.Id == $User.GNT__OrganizationId__c,
    Parent.Parent.Parent.Id == $User.GNT__OrganizationId__c,
    $Profile.Name = &apos;System Administrator&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Hide New Program</label>
    <type>Checkbox</type>
</CustomField>