force-app/main/default/objects/Account/fields/HideRequestedParent__c.field-meta.xml
<CustomField>
    <fullName>HideRequestedParent__c</fullName>
    <formula>OR(
  ParentId != null,
  AND(
    ParentId = null,
    ParentOrgPending__c != true
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Hide Requested Parent</label>
    <type>Checkbox</type>
</CustomField>