force-app/main/default/objects/Account/fields/IndividualAccount__c.field-meta.xml
<CustomField>
    <fullName>IndividualAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B_Individual Account</label>
    <type>Checkbox</type>
</CustomField>