force-app/main/default/objects/Account/fields/InitiateDebarmentProcess__c.field-meta.xml
<CustomField>
    <fullName>InitiateDebarmentProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for debarment process</description>
    <label>X_Initiate Debarment Process</label>
    <type>Checkbox</type>
</CustomField>