force-app/main/default/objects/Account/fields/InternalUniqueID__c.field-meta.xml
<CustomField>
    <fullName>InternalUniqueID__c</fullName>
    <externalId>true</externalId>
    <label>InternalUniqueID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>