force-app/main/default/objects/Account/fields/IsActiveAgency__c.field-meta.xml
<CustomField>
    <fullName>IsActiveAgency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B_Is Active Agency</label>
    <type>Checkbox</type>
</CustomField>