force-app/main/default/objects/Account/fields/IsExtensionAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsExtensionAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed is being used on grantor ---&gt; planning --&gt;  manage recipient</description>
    <label>Is Extension Allowed</label>
    <type>Checkbox</type>
</CustomField>