force-app/main/default/objects/Account/fields/IsGrantingAgency__c.field-meta.xml
<CustomField>
    <fullName>IsGrantingAgency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Granting Agency</label>
    <type>Checkbox</type>
</CustomField>