force-app/main/default/objects/Account/fields/IsKeyPrimaryApplicant__c.field-meta.xml
<CustomField>
    <fullName>IsKeyPrimaryApplicant__c</fullName>
    <formula>$User.Id == PointofContactUser__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Is Key Primary Applicant</label>
    <type>Checkbox</type>
</CustomField>