force-app/main/default/objects/Account/fields/KeyPOCName__c.field-meta.xml
<CustomField>
    <fullName>KeyPOCName__c</fullName>
    <formula>PointofContactUser__r.FirstName+&quot; &quot;+PointofContactUser__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_KeyPOCName</label>
    <type>Text</type>
</CustomField>