force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>To specify the latitude and longitude for the Account where it is located</description>
    <label>X_Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>