force-app/main/default/objects/Account/fields/NameTemplate__c.field-meta.xml
<CustomField>
    <fullName>NameTemplate__c</fullName>
    <formula>&apos;ORG-&apos; + Abbreviation__c +&apos;-&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_NameTemplate</label>
    <type>Text</type>
</CustomField>