force-app/main/default/objects/Account/fields/NonFederalOrganizationType__c.field-meta.xml
<CustomField>
    <fullName>NonFederalOrganizationType__c</fullName>
    <label>Non-Federal Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>