force-app/main/default/objects/Account/fields/NotAgency__c.field-meta.xml
<CustomField>
    <fullName>NotAgency__c</fullName>
    <formula>NOT(ISPICKVAL(Type, &apos;Agency&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Not Agency</label>
    <type>Checkbox</type>
</CustomField>