force-app/main/default/objects/Account/fields/NumberofAnnouncements__c.field-meta.xml
<CustomField>
    <fullName>NumberofAnnouncements__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Announcements which are associated with this Federal/State Account</description>
    <label>X_# Announcements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>