force-app/main/default/objects/Account/fields/NumberOfApplications__c.field-meta.xml
<CustomField>
    <fullName>NumberOfApplications__c</fullName>
    <defaultValue>0</defaultValue>
    <label>X_# Applications</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>