force-app/main/default/objects/Account/fields/NumberofAwards__c.field-meta.xml
<CustomField>
    <fullName>NumberofAwards__c</fullName>
    <defaultValue>0</defaultValue>
    <label>X_# Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>