force-app/main/default/objects/Account/fields/OaksDeptId__c.field-meta.xml
<CustomField>
    <fullName>OaksDeptId__c</fullName>
    <label>X_Oaks Dept Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>