force-app/main/default/objects/Account/fields/OaksOriginCode__c.field-meta.xml
<CustomField>
    <fullName>OaksOriginCode__c</fullName>
    <label>X_Oaks Origin Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>