force-app/main/default/objects/Account/fields/OrganizationAccount__c.field-meta.xml
<CustomField>
    <fullName>OrganizationAccount__c</fullName>
    <formula>!IndividualAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Organization Account</label>
    <type>Checkbox</type>
</CustomField>