force-app/main/default/objects/Account/fields/OrganizationDBA__c.field-meta.xml
<CustomField>
    <fullName>OrganizationDBA__c</fullName>
    <label>Organization DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>