force-app/main/default/objects/Account/fields/OrganizationFiscalYearEndDate__c.field-meta.xml
<CustomField>
    <fullName>OrganizationFiscalYearEndDate__c</fullName>
    <label>OrganizationFiscalYearEndDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>