force-app/main/default/objects/Account/fields/OrganizationFiscalYearStartDate__c.field-meta.xml
<CustomField>
    <fullName>OrganizationFiscalYearStartDate__c</fullName>
    <label>OrganizationFiscalYearStartDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>