force-app/main/default/objects/Account/fields/OrganizationID__c.field-meta.xml
<CustomField>
    <fullName>OrganizationID__c</fullName>
    <label>X_OrganizationID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>