force-app/main/default/objects/Account/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>