force-app/main/default/objects/Account/fields/OverallRiskLevel__c.field-meta.xml
<CustomField>
    <fullName>OverallRiskLevel__c</fullName>
    <formula>if(AND(OverallScore__c&gt; 0,OverallScore__c&lt;= 0.35),&apos;Low&apos;,(if(AND(OverallScore__c&gt; 0.35,OverallScore__c&lt;= 0.60),&apos;Medium&apos;,(if(AND(OverallScore__c&gt; 0.60,OverallScore__c&lt;= 1.00),&apos;High&apos;,&apos;NA&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Overall Risk Level</label>
    <type>Text</type>
</CustomField>