force-app/main/default/objects/Account/fields/OverallScore__c.field-meta.xml
<CustomField>
    <fullName>OverallScore__c</fullName>
    <label>Overall Score</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>