force-app/main/default/objects/Account/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <description>This field use to send email to owner. Due to security issue we are not able to access owner email.</description>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Owner Email</label>
    <type>Text</type>
</CustomField>