force-app/main/default/objects/Account/fields/ParentAccountText__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountText__c</fullName>
    <formula>Parent.Name</formula>
    <label>X_Parent Account Text</label>
    <type>Text</type>
</CustomField>