force-app/main/default/objects/Account/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <formula>IF(ISBLANK(Parent.Id), &apos;&apos;, HYPERLINK( (&apos;/&apos; + Parent.Id ), Parent.Name , &apos;_self&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Parent</label>
    <type>Text</type>
</CustomField>