force-app/main/default/objects/Account/fields/ParentOrganizationLink__c.field-meta.xml
<CustomField>
    <fullName>ParentOrganizationLink__c</fullName>
    <formula>IF(ISBLANK(ParentId),&apos;NA&apos;, HYPERLINK(&apos;/&apos; &amp; ParentId, Parent.Name, &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Organization</label>
    <type>Text</type>
</CustomField>