force-app/main/default/objects/Account/fields/ParentOrgPending__c.field-meta.xml
<CustomField>
    <fullName>ParentOrgPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B_ParentOrgPending</label>
    <type>Checkbox</type>
</CustomField>