force-app/main/default/objects/Account/fields/PendingParentalApproval__c.field-meta.xml
<CustomField>
    <fullName>PendingParentalApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true, this organization has requested approval to be linked to a parent organization</description>
    <label>X_Pending Parental Approval</label>
    <type>Checkbox</type>
</CustomField>