force-app/main/default/objects/Account/fields/PointofContactUser__c.field-meta.xml
<CustomField>
    <fullName>PointofContactUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Primary Applicant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>