force-app/main/default/objects/Account/fields/PrimaryPOCInformed__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPOCInformed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for the debarment of recipient organizations.</description>
    <label>X_Primary POC Informed</label>
    <type>Checkbox</type>
</CustomField>