force-app/main/default/objects/Account/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>